# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwpoptools"
version = "0.1.0"
dependencies = [
  "numpy>=2.2.4",
  "numpyro>=0.18.0",
  "scipy>=1.15.2",
  "jax>=0.5.3",
]

# Following https://learn.scientific-python.org/development/guides/pytest/
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
